--- a/clyq/copilot/pyproject.toml
+++ b/clyq/copilot/pyproject.toml
@@ -26,21 +26,26 @@ version = { attr = "clyso.__version__" }
 where = ["src"]
 
 [tool.setuptools.package-data]
-"*" = [
-  "clyso/ceph/ai/*.yaml",
-  "clyso/ceph/copilot/tools/cern",
-  "clyso/ceph/copilot/tools/cern/README.md",
-  "clyso/ceph/copilot/tools/cern/upmap-remapped.py",
-  "clyso/ceph/copilot/tools/clyso-ceph-diagnostics-collect",
-  "clyso/ceph/copilot/tools/clyso-cephfs-recover-metadata",
-  "clyso/ceph/copilot/tools/clyso-cephfs-session-top",
-  "clyso/ceph/copilot/tools/clyso-rados-bulk",
-  "clyso/ceph/copilot/tools/clyso-rgw-find-missing",
-  "clyso/ceph/copilot/tools/clyso-rgw-incomplete-multipart-list",
-  "clyso/ceph/copilot/tools/clyso-rgw-user-df",
-  "clyso/ceph/copilot/tools/clyso-rgw-user-quota",
-  "clyso/ceph/copilot/tools/contrib",
-  "clyso/ceph/copilot/tools/contrib/README.md",
-  "clyso/ceph/copilot/tools/contrib/jj_ceph_balancer"
+"clyso.ceph.ai" = [
+  "bugs.yaml",
+  "os.yaml",
+  "health.yaml",
+  "versions.yaml"
+]
+"clyso.ceph.copilot" = [
+  "tools/cern/README.md",
+  "tools/cern/upmap-remapped.py",
+  "tools/cern/",
+  "tools/clyso-ceph-diagnostics-collect",
+  "tools/clyso-cephfs-recover-metadata",
+  "tools/clyso-cephfs-session-top",
+  "tools/clyso-rados-bulk",
+  "tools/clyso-rgw-find-missing",
+  "tools/clyso-rgw-incomplete-multipart-list",
+  "tools/clyso-rgw-user-df",
+  "tools/clyso-rgw-user-quota",
+  "tools/contrib/README.md",
+  "tools/contrib/jj_ceph_balancer",
+  "tools/contrib/",
 ]
 
