copilot: add missing dependencies
- 'pandas' is required for 'jj_ceph_balancer'
- 'prettytable' for 'clyso-rgw-user-quota'

Signed-off-by: Joao Eduardo Luis <joao@clyso.com>

--- a/clyq/copilot/pyproject.toml
+++ b/clyq/copilot/pyproject.toml
@@ -13,7 +13,9 @@ dynamic = ["version"]
 dependencies = [
   "humanize",
   "packaging",
-  "PyYaml"
+  "pandas>=2.2.3",
+  "prettytable>=3.16.0",
+  "PyYaml",
 ]
 
 [project.scripts]
