tools: add clyso-cephfs-recover-journal script
(taken from clyso mgr module project)

Signed-off-by: Mykola Golub <mykola.golub@clyso.com>

--- a/clyq/copilot/pyproject.toml
+++ b/clyq/copilot/pyproject.toml
@@ -50,6 +50,7 @@ where = ["src"]
   "tools/cern/",
   "tools/clyso-ceph-diagnostics-collect",
   "tools/clyso-cephfs-recover-metadata",
+  "tools/clyso-cephfs-recover-journal",
   "tools/clyso-cephfs-session-top",
   "tools/clyso-rados-bulk",
   "tools/clyso-rgw-find-missing",
