uv.lock: update packages and ci updates
various changes testing github actions and run_test workflow

Signed-off-by: Joshua Blanch <joshua.blanch@clyso.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           uv --no-cache venv
           source .venv/bin/activate
+          uv sync --all-packages
           ./run_tests.sh
 
       - name: Generate version
@@ -137,5 +138,6 @@ jobs:
 
       - name: Run binary tests
         run: |
+          chmod +x ./dist/ceph-copilot
           chmod +x tests/test_binary.sh
           ./tests/test_binary.sh
