fixes github action and adds in tests (#4)
* workflow/ci: fixes to ci.yml and github actions
* tests: add in tests folder for run_test script to work
* Revert "feat: add agent daemon for webhook support"
---------

Signed-off-by: Joshua Blanch <joshua.blanch@clyso.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           uv --no-cache venv
           source .venv/bin/activate
+          uv sync --all-packages
           ./run_tests.sh
 
       - name: Generate version
@@ -41,6 +42,7 @@ jobs:
         with:
           name: git-version
           path: GIT_VERSION
+
 
   build_rpm:
     runs-on: ubuntu-latest
@@ -136,5 +138,6 @@ jobs:
 
       - name: Run binary tests
         run: |
+          chmod +x ./dist/ceph-copilot
           chmod +x tests/test_binary.sh
           ./tests/test_binary.sh
