--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.0.0"
 description = "Monorepo containing ceph-copilot projects"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "pydantic>=2.11.7",
+]
 
 [tool.uv.workspace]
 members = ["copilot"]
