--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,21 @@ on:
   pull_request:
 
 env:
-  GIT_DEPTH: 50
+  GIT_DEPTH: 0
 
 jobs:
   run_tests:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/astral-sh/uv:python3.11-alpine
+    env:
+      GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
     steps:
+      - name: Install git 
+        run: |
+          apk add git
+          git config --global --add safe.directory .
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -23,8 +30,6 @@ jobs:
         run: |
           apk add nmap-ncat
           apk add bash
-          apk add git
-          git config --global --add safe.directory .
 
       - name: Setup Python environment and run tests
         run: |
@@ -49,7 +54,14 @@ jobs:
     needs: run_tests
     container:
       image: rockylinux:9
+    env:
+      GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
     steps:
+      - name: Install git 
+        run: |
+          dnf install -y git
+          git config --global --add safe.directory .
+
       - name: Checkout code
         uses: actions/checkout@v4
         with:
@@ -72,10 +84,10 @@ jobs:
 
       - name: Test RPM installation
         run: |
-          dnf install -y ./ceph-copilot-*.x86_64.rpm
-          ceph-copilot --help
-          ceph-copilot --version
-          ceph-copilot toolkit list
+          dnf install -y ./clyq-*.x86_64.rpm
+          clyq --help
+          clyq --version
+          clyq toolkit list
 
   build_binary:
     runs-on: ubuntu-latest
@@ -87,11 +99,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: ${{ env.GIT_DEPTH }}
-
-      - name: Download version artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: git-version
 
       - name: Setup CentOS repositories
         run: |
@@ -109,8 +116,8 @@ jobs:
 
       - name: Test binary
         run: |
-          ./dist/ceph-copilot --version
-          ./dist/ceph-copilot --help
+          ./dist/clyq --version
+          ./dist/clyq --help
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
@@ -138,6 +145,6 @@ jobs:
 
       - name: Run binary tests
         run: |
-          chmod +x ./dist/ceph-copilot
+          chmod +x ./dist/clyq
           chmod +x tests/test_binary.sh
           ./tests/test_binary.sh
