--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,10 +96,17 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
 
-      - name: Create Release
+      - name: Create release if it doesn't exist
         run: |
-          gh release create ${{ github.ref_name }} \
-            --title "Release ${{ github.ref_name }}" \
+          if ! gh release view "${{ github.ref_name }}" > /dev/null 2>&1; then
+            gh release create "${{ github.ref_name }}" --title "Release ${{ github.ref_name }}"
+          fi
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: upload to release
+        run: |
+         gh release upload ${{ github.ref_name }} \
             binary/clyq \
             rpm/*.rpm
         env:
