src: renaming clyq to otto
Signed-off-by: Sam Goyal <sam.goyal@clyso.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,6 @@ jobs:
 
       - name: Run binary tests
         run: |
-          chmod +x ./dist/clyq
+          chmod +x ./dist/otto
           chmod +x tests/test_binary.sh
           ./tests/test_binary.sh
