--- a/copilot/pyproject.toml
+++ b/copilot/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools", "setuptools-scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "clyq"
+name = "otto"
 description = "Ceph AI Assistant"
 readme = "README.md"
 license = "LicenseRef-Proprietary"
@@ -20,7 +20,7 @@ dependencies = [
 ]
 
 [project.scripts]
-clyq = "clyso.ceph.copilot:main"
+otto = "clyso.ceph.copilot:main"
 
 [tool.uv]
 cache-keys = [
