renamed copilot directories and ceph-copilot to otto and made relevant changes
Signed-off-by: Sam Goyal <sam.goyal@clyso.com>

--- a/.github/workflows/build-binary-job.yml
+++ b/.github/workflows/build-binary-job.yml
@@ -48,9 +48,9 @@ jobs:
 
       - name: Test binary
         run: |
-          ./dist/clyq --version
-          ./dist/clyq --help
-          VERSION=$(./dist/clyq --version | grep -oP 'v\d+\.\d+\.\d+')
+          ./dist/otto --version
+          ./dist/otto --help
+          VERSION=$(./dist/otto --version | grep -oP 'v\d+\.\d+\.\d+')
           if [ "$VERSION" = "v0.0.0" ]; then
             echo "Error: Version is v0.0.0, git tags not properly detected"
             exit 1
