--- a/otto/pyproject.toml
+++ b/otto/pyproject.toml
@@ -20,7 +20,7 @@ dependencies = [
 ]
 
 [project.scripts]
-otto = "clyso.ceph.copilot:main"
+otto = "clyso.ceph.otto:main"
 
 [tool.uv]
 cache-keys = [
@@ -43,7 +43,7 @@ where = ["src"]
   "health.yaml",
   "versions.yaml"
 ]
-"clyso.ceph.copilot" = [
+"clyso.ceph.otto" = [
   "tools/cern/README.md",
   "tools/cern/upmap-remapped.py",
   "tools/cern/",
@@ -63,5 +63,5 @@ where = ["src"]
 
 [tool.ruff]
 exclude = [
-  "src/clyso/ceph/copilot/tools"
+  "src/clyso/ceph/otto/tools"
 ]
