--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "ceph-copilot-monorepo"
+name = "otto-monorepo"
 version = "0.0.0"
-description = "Monorepo containing ceph-copilot projects"
+description = "Monorepo containing otto projects"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
@@ -9,7 +9,7 @@ dependencies = [
 ]
 
 [tool.uv.workspace]
-members = ["copilot"]
+members = ["otto"]
 
 [dependency-groups]
 dev = ["basedpyright>=1.29.0", "lefthook>=1.11.11", "ruff>=0.11.6"]
