--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -118,6 +118,8 @@ jobs:
     needs: run_tests
     container:
       image: centos:8
+    env:
+      GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -133,6 +135,7 @@ jobs:
       - name: Install dependencies
         run: |
           yum install -y curl git
+          git config --global --add safe.directory .
           curl -LsSf https://astral.sh/uv/install.sh | UV_INSTALL_DIR=/usr/bin UV_DISABLE_UPDATE=1 UV_NO_MODIFY_PATH=1 /bin/sh
 
       - name: Build binary
@@ -142,6 +145,11 @@ jobs:
         run: |
           ./dist/clyq --version
           ./dist/clyq --help
+          VERSION=$(./dist/clyq --version | grep -oP 'v\d+\.\d+\.\d+')
+          if [ "$VERSION" = "v0.0.0" ]; then
+            echo "Error: Version is v0.0.0, git tags not properly detected"
+            exit 1
+          fi
 
       - name: Upload binary artifact
         uses: actions/upload-artifact@v4
