--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,44 +74,8 @@ jobs:
 
 
   build_rpm:
-    runs-on: ubuntu-latest
+    uses: ./.github/workflows/build-rpm-job.yml
     needs: run_tests
-    container:
-      image: rockylinux:9
-    env:
-      GIT_DISCOVERY_ACROSS_FILESYSTEM: 1
-    steps:
-      - name: Install git 
-        run: |
-          dnf install -y git
-          git config --global --add safe.directory .
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: ${{ env.GIT_DEPTH }}
-
-      - name: Download version artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: git-version
-
-      - name: Install dependencies
-        run: |
-          dnf install -y epel-release
-          dnf config-manager --enable crb
-          dnf install -y git rpm-build rpmdevtools python3-devel
-          curl -LsSf https://astral.sh/uv/install.sh | UV_INSTALL_DIR=/usr/bin UV_DISABLE_UPDATE=1 UV_NO_MODIFY_PATH=1 /bin/sh
-
-      - name: Build RPM
-        run: ./build_rpm.sh
-
-      - name: Test RPM installation
-        run: |
-          dnf install -y ./clyq-*.x86_64.rpm
-          clyq --help
-          clyq --version
-          clyq toolkit list
 
   build_binary:
     uses: ./.github/workflows/build-binary-job.yml
