--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,36 +18,10 @@ jobs:
       artifact_name: binary
 
   build_rpm:
-    runs-on: ubuntu-latest
-    container:
-      image: rockylinux:9
-    steps:
-      - name: Install git 
-        run: |
-          dnf install -y git
-          git config --global --add safe.directory .
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: ${{ env.GIT_DEPTH }}
-
-      - name: Install dependencies
-        run: |
-          dnf install -y epel-release
-          dnf config-manager --enable crb
-          dnf install -y git rpm-build rpmdevtools python3-devel
-          curl -LsSf https://astral.sh/uv/install.sh | UV_INSTALL_DIR=/usr/bin UV_DISABLE_UPDATE=1 UV_NO_MODIFY_PATH=1 /bin/sh
-
-      - name: Build RPM
-        run: ./build_rpm.sh
-
-      - name: Upload RPM artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: rpm
-          path: "*.rpm"
-          retention-days: 1
+    uses: ./.github/workflows/build-rpm-job.yml
+    with:
+      artifact_name: rpm
+      run_tests: false
 
   create_release:
     runs-on: ubuntu-latest
