pyproject.toml: only update uv.lock file for every new tag
only need to push a new lock file when new dependencies are added or a new tag is created.

Signed-off-by: Joshua Blanch <joshua.blanch@clyso.com>

--- a/otto/pyproject.toml
+++ b/otto/pyproject.toml
@@ -25,7 +25,7 @@ otto = "clyso.ceph.otto:main"
 [tool.uv]
 cache-keys = [
   { file = "pyproject.toml" }, 
-  { git = { commit = true, tags = true } }
+  { git = { tags = true } }
 ]
 
 [tool.setuptools_scm]
