.github/workflows: added dependency on create release job for upload job and inherited secrets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,6 +53,8 @@ jobs:
 
   upload_binary_to_s3:
     uses: ./.github/workflows/upload-release-s3-job.yml
+    needs: [build_binary, create_release]
+    secrets: inherit
     with:
       artifact_name: binary
       release_tag: ${{ github.ref_name }}
