--- a/.github/workflows/upload-release-s3-job.yml
+++ b/.github/workflows/upload-release-s3-job.yml
@@ -27,6 +27,10 @@ jobs:
           S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
           S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
         run: |
+          if [ -z "$S3_HOST_BASE" ]; then echo "ERROR: S3_HOST_BASE not set"; exit 1; fi
+          if [ -z "$S3_ACCESS_KEY" ]; then echo "ERROR: S3_ACCESS_KEY not set"; exit 1; fi
+          if [ -z "$S3_SECRET_KEY" ]; then echo "ERROR: S3_SECRET_KEY not set"; exit 1; fi
+
           cat << EOF > ~/.s3cfg
           [default]
           access_key = ${S3_ACCESS_KEY}
