.github/workflows: trying to cat s3cmd config file

--- a/.github/workflows/upload-release-s3-job.yml
+++ b/.github/workflows/upload-release-s3-job.yml
@@ -42,6 +42,7 @@ jobs:
           check_ssl_hostname = True
           signature_v2 = False
           EOF
+          cat ~/.s3cfg
       
       - name: Test s3cmd
         run: |
